v2/infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pitgo
  labels:
    app: pitgo
